# seL4-binary-verification

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  Cargo.toml  HACKING.md  Makefile  README.md  cabal.project  cabal.project.freeze  foo  package.yaml  sel4-bv.cabal  stack.yaml
components/check-scratch/: Main.hs
components/concrete-syntax/BV/: ConcreteSyntax.hs
components/core-test/: Main.hs
components/profiling-scratch/: Main.hs
components/smtlib2-test/: Main.hs
crates/bv/: Cargo.toml
crates/bv/src/: abstract_syntax.rs  compat.rs  concrete_syntax.rs  debugger.rs  expr.rs  expr_constructors.rs  fixup.rs  graph.rs  inst_logic.rs  lib.rs  logic.rs  objdump.rs  pairing.rs  parse.rs  pretty_hack.rs  problem.rs  proof_script.rs  pseudo_compile.rs  sel4.rs  syntax.rs  typecheck.rs  utils.rs
crates/bv/src/abstract_syntax/: abstract_node_graph.rs
crates/bv/src/check/: checks.rs
crates/bv/src/concrete_syntax/: parse.rs  print.rs
crates/bv/src/expr/: typecheck.rs
crates/bv/src/graph/: generic_ops.rs  mod.rs
crates/bv/src/sel4/: mod.rs
crates/bv/src/tests/: mod.rs  scratch.rs  utils.rs
crates/bv/src/utils/: petgraph.rs
crates/bv/src/utils/petgraph/: adapters.rs  algorithms.rs
examples/seL4/: README.md  check.sh  run-worker-in-nix-shell.sh  solvers.yaml  workers.local.yaml  workers.remote.yaml
hs/: .gitignore  .stylish-haskell.yaml  Makefile  bv.cabal  cabal.project  cabal.project.freeze  nixpkgs.nix  package.yaml  sel4-bv.cabal  shell.nix  stack.yaml
hs/abstract-simple-smt/SimpleSMT/Abstract/: SExpr.hs
hs/app/: Main.hs
hs/components/abstract-simple-smt/SimpleSMT/: Abstract.hs
hs/components/app/: Main.hs
hs/components/concrete-syntax-test/: Main.hs
hs/components/concrete-syntax/BV/: ConcreteSyntax.hs
hs/components/concrete-syntax/BV/ConcreteSyntax/: Classes.hs  FastInstances.hs  FastParsing.hs  Instances.hs  NormalizeSMTProofCheck.hs  ObjDump.hs  Parsing.hs  Printing.hs  SExpr.hs  SExprFast.hs  SExprWithPlaceholders.hs  SExprWithPlaceholdersFast.hs  SExprWithPlaceholdersFaster.hs  TargetDir.hs
hs/components/concrete-syntax/BV/ConcreteSyntax/GraphLangLike/: Adapters.hs
hs/components/core-test/: Main.hs
hs/components/core/BV/: Core.hs
hs/components/core/BV/Core/: Arch.hs  BuildProblem.hs  Check.hs  ConfigureSMT.hs  ConfigureSmt.hs  Environment.hs  ExecuteSMTProofChecks.hs  ExecuteSmtProofChecks.hs  ExprConstruction.hs  Fixup.hs  FormulatePairing.hs  Glue.hs  GluedStages.hs  Graph.hs  InlineAssembly.hs  Logic.hs  ProofCheckConstruction.hs  ProofChecks.hs  SExpr.hs  Types.hs  Utils.hs
hs/components/core/BV/Core/Debug/: Utils.hs
hs/components/core/BV/Core/Stages/: BuildProblem.hs  CompileProofChecks.hs  EnumerateProofChecks.hs  Fixup.hs  FormulatePairing.hs  InlineAssembly.hs  PseudoCompile.hs  Utils.hs
hs/components/core/BV/Core/Types/: Construction.hs  Extras.hs  Inputs.hs  ObjDump.hs  Pairing.hs  Problem.hs  Program.hs  ProofChecks.hs  ProofScript.hs  SExprWithPlaceholders.hs  SMTProofChecks.hs  SearchOutputs.hs
hs/components/core/BV/Core/Types/Construction/: Expr.hs  Pairing.hs  ProofCheck.hs  SExprWithPlaceholders.hs
hs/components/core/BV/Core/Types/Extras/: Expr.hs  Pairing.hs  ProofCheck.hs
hs/components/core/data/: word32-preamble.smt2
hs/components/profiling-scratch/: Main.hs
hs/components/smtlib2-test/: Main.hs
hs/components/smtlib2-types/BV/SMTLIB2/: Types.hs
hs/components/smtlib2-types/BV/SMTLIB2/Types/: Command.hs  SExpr.hs
hs/components/smtlib2-types/BV/SMTLIB2/Types/SExpr/: Read.hs
hs/components/smtlib2/BV/: SMTLIB2.hs
hs/components/smtlib2/BV/SMTLIB2/: Builder.hs  Process.hs
hs/components/smtlib2/BV/SMTLIB2/Parser/: Attoparsec.hs  Common.hs  Megaparsec.hs
hs/components/system/: BV.hs
hs/components/system-test/: Main.hs
hs/components/system/BV/: ConcreteSyntax.hs  Fixup.hs  Graph.hs  Inputs.hs  ObjDump.hs  Pairing.hs  Printing.hs  Program.hs  ProofChecks.hs  ProofScript.hs  PseudoCompile.hs  SeL4.hs  TargetDir.hs  Utils.hs
hs/components/system/BV/ConcreteSyntax/: Instances.hs  Parsing.hs  Utils.hs
hs/components/system/BV/Core/: BuildProblem.hs  Check.hs  Fixup.hs  FormulatePairing.hs  Graph.hs  Inputs.hs  ObjDump.hs  Pairing.hs  Problem.hs  Program.hs  ProofChecks.hs  ProofScript.hs  PseudoCompile.hs
hs/components/system/BV/Core/Types/: Inputs.hs  ObjDump.hs  Problem.hs  ProofScript.hs
hs/components/system/BV/System/: CacheKey.hs  Glue.hs  IntermediateArtifacts.hs  Notes.hs  Parsing.hs  Printing.hs  SeL4.hs  TargetDir.hs  Utils.hs
hs/components/system/BV/System/Test/: Main.hs  Scratch.hs  Utils.hs
hs/components/system/BV/Test/: Scratch.hs  Utils.hs
hs/components/target-dir/BV/: TargetDir.hs
hs/components/test/: Main.hs
hs/components/test-utils/BV/Test/: Utils.hs
hs/nix/: default.nix  nixpkgs.nix  shell.nix  stacklock.nix
hs/notes/: code.md  todo.md
hs/src/: BV.hs
hs/src/BV/: BuildProblem.hs  Check.hs  FormulatePairing.hs  Glue.hs  Graph.hs  Inputs.hs  ObjDump.hs  Pairing.hs  Parsing.hs  Printing.hs  Problem.hs  Program.hs  ProofChecks.hs  ProofScript.hs  SMTSExpr.hs  SMTSolverInteraction.hs  TargetDir.hs  Utils.hs
hs/src/BV/Test/: Main.hs  Scratch.hs  Utils.hs
hs/test/: Main.hs
nix/: default.nix  distrib.nix  nixpkgs.nix  shell.nix  stacklock.nix  stacklock2nix.nix
notes/: Notes.hs  notes.md  notes.txt  todo.md  todo.txt
rust/: Makefile
rust/notes/: todo.txt
scripts/: d.sh  extract-smt-input.py  par-scratch.sh  run-worker-in-nix-shell.sh  solverlist.yaml  solvers.yaml  test-check.sh  workers.yaml  xt.sh
scripts/local-check/: test-check.sh
scripts/profiling/: x.sh
scripts/remote-check/: test-check.sh  workers.yaml
scripts/remote-scratch/: xt.sh
(+382 files in other folders)
