cabal-version: 3.0
name: bv
version: 0.1.0.0
synopsis: TODO
description: TODO
license: BSD-2-Clause
author: Nick Spinale (Colias Group, LLC)
maintainer: Nick Spinale <nick@nickspinale.com>
copyright: Copyright (c) 2025 Colias Group, LLC
build-type: Simple
tested-with: GHC == 9.6.6

common common
  default-language: Haskell2010
  default-extensions:
    DeriveGeneric
    DuplicateRecordFields
    NamedFieldPuns
    NoFieldSelectors
    OverloadedLabels
  ghc-options:
    -Wall
  build-depends:
    base,

library
  import: common
  exposed-modules:
    BV,
    BV.Graph,
    BV.Inputs,
    BV.ObjDump,
    BV.Parsing,
    BV.Pairing,
    BV.Printing,
    BV.Problem,
    BV.Program,
    BV.SeL4,
    BV.TargetDir,
    -- TODO hack
    BV.Test.Utils,
    BV.Test.Scratch,
  build-depends:
    containers,
    optics-core,
    parsec,
    filepath,
    text,
    -- TODO prune
    pretty-show,
    pretty-simple,
    -- TODO hack
    -- tasty,
    -- tasty-hunit,
  hs-source-dirs: src

executable bv
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options:
    -- TODO probably unnecessary here
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
    bv,

test-suite bv-test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    filepath,
    tasty,
    tasty-hunit,
    bv,
