[package]
name = "bv"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
anyhow = "1.0.86"
arrayvec = "0.7.6"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
num = "0.4.3"
petgraph = "0.6.5"
prettyplease = "0.2.22"
proc-macro2 = { version = "1.0", features = [ "span-locations" ] }
quote = "1.0"
regex = "1.10.6"
syn = "2.0"

[dev-dependencies]
ctor = "0.2.8"
pretty_assertions = "1.4.0"
